Mondelbrot starting point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(thirdparty)
 include_directories(src)
 
 # For Qt
+option(DCMAKE_PREFIX_PATH /home/ritka-admin/Qt)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
