--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -17,3 +17,7 @@ target_link_libraries(demo-app
         Qt5::Widgets
         FGL::Base
 )
+
+#set(CMAKE_AUTOMOC ON)
+#set(CMAKE_AUTORCC ON)
+#set(CMAKE_AUTOUIC ON)
